--- a/KingsNThings/pom.xml
+++ b/KingsNThings/pom.xml
@@ -9,6 +9,7 @@
 	
 	<properties>
 		<org.springframework.version>4.0.0.RELEASE</org.springframework.version>
+		<jackson-2-version>2.3.0</jackson-2-version>
 	</properties>
 	
 	<dependencies>
@@ -42,25 +43,26 @@
 		  	<artifactId>spring-web</artifactId>
 		  	<version>${org.springframework.version}</version>
 		</dependency>
-		
 		<dependency>
 		  <groupId>org.springframework</groupId>
 		  <artifactId>spring-webmvc</artifactId>
 		  <version>${org.springframework.version}</version>
 		</dependency>
+		<dependency>
+		   <groupId>com.fasterxml.jackson.core</groupId>
+		   <artifactId>jackson-core</artifactId>
+		   <version>${jackson-2-version}</version>
+		 </dependency>
+		 <dependency>
+		   <groupId>com.fasterxml.jackson.core</groupId>
+		   <artifactId>jackson-annotations</artifactId>
+		   <version>${jackson-2-version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>com.fasterxml.jackson.core</groupId>
+		  <artifactId>jackson-databind</artifactId>
+		  <version>${jackson-2-version}</version>
+		</dependency>
 	</dependencies>
-	
-	<repositories>
-		<repository>
-		    <id>com.springsource.repository.bundles.release</id>
-		    <name>EBR Spring Release Repository</name>
-		    <url>http:// repository.springsource.com/maven/bundles/release</url>
-		</repository>
-		<repository>
-		    <id>com.springsource.repository.bundles.external</id>
-		    <name>EBR External Release Repository</name>
-		    <url>http:// repository.springsource.com/maven/bundles/external</url>
-		</repository>
-	</repositories>
 
 </project>
